<resources>
    <string name="app_name">KnowMe</string>
    <string name="movies">Movies</string>
    <string name="books">Books</string>
    <string name="music">Music</string>
    <string name="hobbies">Hobbies</string>
    <string name="quotes">Quotes</string>
    <string name="food">Food</string>
    <string name="topics">Topics</string>
    <string name="custom">Custom</string>
    <string name="myDescription">Hi! This is 'KnowMe'. Share what you love with your friends and let them know you</string>

</resources>
