<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="clicked"
            type="com.mmsoft.knowme.ui.mainknowme.MainKnowMeFragment"
            />
    </data>

    <FrameLayout
        android:id="@+id/mainknowme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mainknowme.MainKnowMeFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/UserImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/BioText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/myDescription"
                    android:textAlignment="center"
                    />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btnMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movies"
                    android:onClick="@{view->clicked.clicked(view,1)}"
                    />
                <Button
                    android:id="@+id/btnMusic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/music"
                    android:onClick="@{view->clicked.clicked(view,2)}"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/books"
                    android:onClick="@{view->clicked.clicked(view,3)}"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbies"
                    android:onClick="@{view->clicked.clicked(view,4)}"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topics"
                    android:onClick="@{view->clicked.clicked(view,5)}"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quotes"
                    android:onClick="@{view->clicked.clicked(view,6)}"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food"
                    android:onClick="@{view->clicked.clicked(view,7)}"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom"
                    android:onClick="@{view->clicked.clicked(view,8)}"
                    />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</layout>
